--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -44,7 +45,9 @@
    "outputs": [],
    "source": [
     "# Set features. This will also be used as your x values.\n",
-    "selected_features = df[['names', 'of', 'selected', 'features', 'here']]"
+    "selected_features = df[['koi_period', 'koi_time0bk', 'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', 'koi_teq', 'koi_insol',\n",
+    "                       'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_srad', 'ra', 'dec', 'koi_kepmag']]\n",
+    "selected_features"
    ]
   },
   {
@@ -61,7 +64,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "target = df[\"koi_disposition\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_dummy = pd.get_dummies(target)\n",
+    "target_dummy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_dummy = target_dummy.drop(columns=['CANDIDATE', 'FALSE POSITIVE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_dummy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(selected_features.shape, target_dummy.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(selected_features, target_dummy, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
@@ -87,7 +140,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale your data"
+    "# Scale your data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Create a StandardScater model and fit it to the training data\n",
+    "\n",
+    "X_scaler = StandardScaler().fit(X_train)\n",
+    "y_scaler = StandardScaler().fit(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the training and testing data using the X_scaler and y_scaler models\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)\n",
+    "y_train_scaled = y_scaler.transform(y_train)\n",
+    "y_test_scaled = y_scaler.transform(y_test)"
    ]
   },
   {
@@ -96,6 +169,27 @@
    "source": [
     "# Train the Model\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "model2 = LinearRegression()\n",
+    "model2.fit(X_train_scaled, y_train_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC \n",
+    "model2 = SVC(kernel='linear')"
    ]
   },
   {
@@ -123,7 +217,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the GridSearchCV model"
+    "# Create the GridSearchCV model\n",
+    "from sklearn.svm import SVC \n",
+    "model = SVC(kernel='linear')"
    ]
   },
   {
@@ -132,7 +228,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the model with GridSearch"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "param_grid = {'C': [1, 5, 10],\n",
+    "              'gamma': [0.0001, 0.001, 0.01]}\n",
+    "grid2 = GridSearchCV(model, param_grid, verbose=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model with GridSearch\n",
+    "grid2.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -173,9 +282,9 @@
    "name": "dev"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.10"
   },
   "nteract": {
    "version": "0.12.3"
