--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -188,16 +188,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.svm import SVC \n",
-    "model2 = SVC(kernel='linear')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(f\"Training Data Score: {model2.score(X_train_scaled, y_train)}\")\n",
     "print(f\"Testing Data Score: {model2.score(X_test_scaled, y_test)}\")"
    ]
@@ -272,8 +262,8 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'your_name.sav'\n",
-    "joblib.dump(your_model, filename)"
+    "filename = 'Chris_pope_one.sav'\n",
+    "joblib.dump(model, filename)"
    ]
   }
  ],
