--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -218,9 +218,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+    "  decision_function_shape=None, degree=3, gamma='auto', kernel='linear',\n",
+    "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+    "  tol=0.001, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "param_grid = {'C': [1, 5, 10],\n",
-    "              'gamma': [0.0001, 0.001, 0.01]}\n",
+    "param_grid = {'C': [1, 25, 50, 100],\n",
+    "              'gamma': [0.00001, 0.00005, 0.0001, 0.0005]}\n",
     "grid2 = GridSearchCV(model, param_grid, verbose=3)"
    ]
   },
@@ -262,7 +274,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'Chris_pope_one.sav'\n",
+    "filename = 'Chris_pope_two.sav'\n",
     "joblib.dump(model, filename)"
    ]
   }
