--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -45,8 +45,8 @@
    "outputs": [],
    "source": [
     "# Set features. This will also be used as your x values.\n",
-    "selected_features = df[['koi_period', 'koi_time0bk', 'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', 'koi_teq', 'koi_insol',\n",
-    "                       'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_srad', 'ra', 'dec', 'koi_kepmag']]\n",
+    "selected_features = df[['koi_fpflag_nt', 'koi_fpflag_ss', 'koi_fpflag_co', 'koi_fpflag_ec', 'koi_period', 'koi_time0bk', 'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', \n",
+    "                       'koi_teq', 'koi_insol', 'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_srad', 'ra', 'dec', 'koi_kepmag']]\n",
     "selected_features"
    ]
   },
@@ -274,7 +274,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'Chris_pope_two.sav'\n",
+    "filename = 'Chris_pope_three.sav'\n",
     "joblib.dump(model, filename)"
    ]
   }
