--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
@@ -45,8 +46,9 @@
    "outputs": [],
    "source": [
     "# Set features. This will also be used as your x values.\n",
-    "selected_features = df[['koi_fpflag_nt', 'koi_fpflag_ss', 'koi_fpflag_co', 'koi_fpflag_ec', 'koi_period', 'koi_time0bk', 'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', \n",
-    "                       'koi_teq', 'koi_insol', 'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_srad', 'ra', 'dec', 'koi_kepmag']]\n",
+    "selected_features = df[['koi_fpflag_nt', 'koi_fpflag_ss', 'koi_fpflag_co', 'koi_fpflag_ec', 'koi_period', 'koi_period_err1', 'koi_period_err2', 'koi_time0bk', 'koi_time0bk_err1', 'koi_time0bk_err2', \n",
+    "                        'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', 'koi_teq', 'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_slogg_err1', 'koi_slogg_err2', 'koi_srad',\n",
+    "                        'koi_srad_err1', 'koi_srad_err2', 'ra', 'dec', 'koi_kepmag']]\n",
     "selected_features"
    ]
   },
@@ -145,8 +147,7 @@
     "\n",
     "# Create a StandardScater model and fit it to the training data\n",
     "\n",
-    "X_scaler = StandardScaler().fit(X_train)\n",
-    "y_scaler = StandardScaler().fit(y_train)"
+    "X_scaler = StandardScaler().fit(X_train)"
    ]
   },
   {
@@ -158,9 +159,7 @@
     "# Transform the training and testing data using the X_scaler and y_scaler models\n",
     "\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)\n",
-    "y_train_scaled = y_scaler.transform(y_train)\n",
-    "y_test_scaled = y_scaler.transform(y_test)"
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -179,7 +178,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "model2 = LinearRegression()\n",
-    "model2.fit(X_train_scaled, y_train_scaled)"
+    "model2.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -232,7 +231,7 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'C': [1, 25, 50, 100],\n",
-    "              'gamma': [0.00001, 0.00005, 0.0001, 0.0005]}\n",
+    "              'gamma': [0.00001, 0.0001, 0.001, 0.01]}\n",
     "grid2 = GridSearchCV(model, param_grid, verbose=3)"
    ]
   },
@@ -243,7 +242,7 @@
    "outputs": [],
    "source": [
     "# Train the model with GridSearch\n",
-    "grid2.fit(X_train_scaled, y_train)"
+    "grid2.fit(X_train_scaled, np.ravel(y_train,order='C'))"
    ]
   },
   {
@@ -274,7 +273,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'Chris_pope_three.sav'\n",
+    "filename = 'Chris_pope_four.sav'\n",
     "joblib.dump(model, filename)"
    ]
   }
