--- a/model_1.ipynb
+++ b/model_1.ipynb
@@ -47,8 +47,8 @@
    "source": [
     "# Set features. This will also be used as your x values.\n",
     "selected_features = df[['koi_fpflag_nt', 'koi_fpflag_ss', 'koi_fpflag_co', 'koi_fpflag_ec', 'koi_period', 'koi_period_err1', 'koi_period_err2', 'koi_time0bk', 'koi_time0bk_err1', 'koi_time0bk_err2', \n",
-    "                        'koi_impact', 'koi_duration', 'koi_depth', 'koi_prad', 'koi_teq', 'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_slogg_err1', 'koi_slogg_err2', 'koi_srad',\n",
-    "                        'koi_srad_err1', 'koi_srad_err2', 'ra', 'dec', 'koi_kepmag']]\n",
+    "                        'koi_impact', 'koi_impact_err1', 'koi_impact_err2', 'koi_duration', 'koi_duration_err1', 'koi_duration_err2', 'koi_depth', 'koi_depth_err1', 'koi_depth_err2', 'koi_prad', 'koi_teq',\n",
+    "                        'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_slogg', 'koi_slogg_err1', 'koi_slogg_err2', 'koi_srad', 'koi_srad_err1', 'koi_srad_err2', 'ra', 'dec', 'koi_kepmag']]\n",
     "selected_features"
    ]
   },
@@ -151,6 +151,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the Model\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -160,14 +168,6 @@
     "\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
     "X_test_scaled = X_scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train the Model\n",
-    "\n"
    ]
   },
   {
@@ -273,7 +273,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'Chris_pope_four.sav'\n",
+    "filename = 'Chris_pope_linear.sav'\n",
     "joblib.dump(model, filename)"
    ]
   }
