--- a/model_KNN.ipynb
+++ b/model_KNN.ipynb
@@ -182,7 +182,7 @@
     "# Note: We only use odd numbers because we don't want any ties\n",
     "train_scores = []\n",
     "test_scores = []\n",
-    "for k in range(1, 100, 2):\n",
+    "for k in range(1, 40, 2):\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
     "    knn.fit(X_train_scaled, np.ravel(y_train,order='C'))\n",
     "    train_score = knn.score(X_train_scaled, y_train)\n",
@@ -205,13 +205,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save your model by updating \"your_name\" with your name\n",
-    "# and \"your_model\" with your model variable\n",
-    "# be sure to turn this in to BCS\n",
-    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
-    "import joblib\n",
-    "filename = 'Chris_pope_KNN.sav'\n",
-    "joblib.dump(model, filename)"
+    " # Note that k: 13 seems to be the best choice for this dataset\n",
+    "knn = KNeighborsClassifier(n_neighbors=13)\n",
+    "knn.fit(X_train_scaled, y_train)\n",
+    "print('k=15 Test Acc: %.3f' % knn.score(X_test_scaled, y_test))"
    ]
   }
  ],
