--- a/model_Deep_Learning.ipynb
+++ b/model_Deep_Learning.ipynb
@@ -6,17 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Set the seed value for the notebook so the results are reproducible\n",
-    "from numpy.random import seed\n",
-    "seed(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -309,10 +298,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_loss, model_accuracy = model.evaluate(\n",
-    "    X_test_scaled, y_test_categorical, verbose=2)\n",
-    "print(\n",
-    "    f\"Normal Neural Network - Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+    "# save your model by updating \"your_name\" with your name\n",
+    "# and \"your_model\" with your model variable\n",
+    "# be sure to turn this in to BCS\n",
+    "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
+    "model.save('Chris_pope_neural_model.sav')\n",
+    "deep_model.save('Chris_pope_neural_deep_model.sav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model\n",
+    "from tensorflow.keras.models import load_model\n",
+    "model = load_model('Chris_pope_neural_model.sav')\n",
+    "deep_model = load_model('Chris_pope_neural_deep_model.sav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_loss, model_accuracy = model.evaluate(X_test_scaled, y_test_categorical, verbose=2)\n",
+    "print( f\"Normal Neural Network - Loss: {model_loss}, Accuracy: {model_accuracy}\")"
    ]
   },
   {
