--- a/model_Deep_Learning.ipynb
+++ b/model_Deep_Learning.ipynb
@@ -309,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Load the model\n",
