--- a/model_KNN.ipynb
+++ b/model_KNN.ipynb
@@ -175,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Loop through different k values to see which has the highest accuracy\n",
@@ -202,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     " # Note that k: 15 seems to be the best choice for this dataset\n",
