--- a/model_KNN.ipynb
+++ b/model_KNN.ipynb
@@ -210,9 +210,9 @@
    "outputs": [],
    "source": [
     " # Note that k: 15 seems to be the best choice for this dataset\n",
-    "knn = KNeighborsClassifier(n_neighbors=13)\n",
-    "knn.fit(X_train_scaled, y_train)\n",
-    "print('k=15 Test Acc: %.3f' % knn.score(X_test_scaled, y_test))"
+    "knn = KNeighborsClassifier(n_neighbors=27)\n",
+    "knn.fit(X_train_scaled, np.ravel(y_train,order='C'))\n",
+    "print('k=27 Test Acc: %.3f' % knn.score(X_test_scaled, y_test))"
    ]
   }
  ],
